--- a/bot/admin/web/src/app/shared/info-button/info-button.component.css
+++ b/bot/admin/web/src/app/shared/info-button/info-button.component.css
@@ -13,23 +13,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+.position-top-right{
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
 
-import {Pipe, PipeTransform} from "@angular/core";
-
-@Pipe({name: 'storyTagIcon'})
-export class StoryTagIconPipe implements PipeTransform{
-  transform(type: string): any {
-    let icon: string;
-    switch (type) {
-      case 'ENABLE':
-        icon = 'check_circle_outline';
-        break;
-      case 'DISABLE':
-        icon = 'highlight_off';
-        break;
-      default:
-        icon = 'play_circle_outline'
-    }
-    return icon
-  }
+.position-inline{
+  margin-left: 5px;
+  margin-right: 5px;
 }
