--- a/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.css
+++ b/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.css
@@ -3,11 +3,13 @@
   display: flex;
   flex-direction: column;
   position: fixed;
+  margin-left: -5rem;
 }
 
 .calendar-body {
   display: flex;
   flex-direction: row;
+  padding: 0;
 }
 
 .calendar-shortcuts {
