--- a/bot/admin/web/src/app/analytics/behavior/behavior.component.html
+++ b/bot/admin/web/src/app/analytics/behavior/behavior.component.html
@@ -10,68 +10,75 @@
         <nb-icon icon="refresh-outline"></nb-icon>
       </button>
       <span style="float: right; padding: 5px;">
-        <nb-toggle status="success" [(ngModel)]="pretty">
-          Pretty (3D)
-        </nb-toggle>
-        &nbsp;&nbsp;
         <nb-toggle status="warning" [(ngModel)]="displayTests" (change)="waitAndRefresh()">
           Tests (Tock Studio)
         </nb-toggle>
-          <!--      <button nbButton outline shape="round" (click)="onPdfAction()" nbTooltip="Export page as PDF"-->
-          <!--              status="primary" style="float: right; margin-right: 40px;">-->
-          <!--        PDF <nb-icon icon="download"></nb-icon>-->
-          <!--      </button>-->
+        <!--      <button nbButton outline shape="round" (click)="onPdfAction()" nbTooltip="Export page as PDF"-->
+        <!--              status="primary" style="float: right; margin-right: 40px;">-->
+        <!--        PDF <nb-icon icon="download"></nb-icon>-->
+        <!--      </button>-->
       </span>
     </nb-card-body>
   </nb-card>
 
   <nb-accordion>
-    <nb-accordion-item #messagesByStoryItem (collapsedChange)="collapsedChange($event)">
+    <nb-accordion-item #messagesByStoryItem (collapsedChange)="collapsedChange($event)"
+                       *ngIf="userPreferences.graphs.behavior.messagesByStory">
       <nb-accordion-item-header>Messages by Story</nb-accordion-item-header>
       <nb-accordion-item-body>
-        <tock-chart [data]="messagesByStoryData" title="Messages by Story" [pretty]="pretty" type="PieChart"></tock-chart>
+        <tock-chart [data]="messagesByStoryData" title="Messages by Story" type="PieChart" [chartPreferences]="userPreferences"></tock-chart>
       </nb-accordion-item-body>
     </nb-accordion-item>
-    <nb-accordion-item #messagesByIntentItem (collapsedChange)="collapsedChange($event)">
+    <nb-accordion-item #messagesByIntentItem (collapsedChange)="collapsedChange($event)"
+                       *ngIf="userPreferences.graphs.behavior.messagesByIntent">
       <nb-accordion-item-header>Messages by Intent</nb-accordion-item-header>
       <nb-accordion-item-body>
-        <tock-chart [data]="messagesByIntentData" title="Messages by Intent" [pretty]="pretty" type="PieChart"></tock-chart>
+        <tock-chart [data]="messagesByIntentData" title="Messages by Intent" type="PieChart" [chartPreferences]="userPreferences"></tock-chart>
       </nb-accordion-item-body>
     </nb-accordion-item>
-    <nb-accordion-item #messagesByDayOfWeekItem (collapsedChange)="collapsedChange($event)">
+    <nb-accordion-item #messagesByDayOfWeekItem (collapsedChange)="collapsedChange($event)"
+                       *ngIf="userPreferences.graphs.behavior.messagesByDayOfWeek">
       <nb-accordion-item-header>Messages by Day of Week</nb-accordion-item-header>
       <nb-accordion-item-body>
-        <tock-chart [data]="messagesByDayOfWeekData" title="Messages by Day of Week" [pretty]="pretty" type="PieChart"></tock-chart>
+        <tock-chart [data]="messagesByDayOfWeekData" title="Messages by Day of Week" type="PieChart"
+                    [chartPreferences]="userPreferences"></tock-chart>
       </nb-accordion-item-body>
     </nb-accordion-item>
-    <nb-accordion-item #messagesByHourItem (collapsedChange)="collapsedChange($event)">
+    <nb-accordion-item #messagesByHourItem (collapsedChange)="collapsedChange($event)"
+                       *ngIf="userPreferences.graphs.behavior.messagesByHourOfDay">
       <nb-accordion-item-header>Messages by Hour of Day</nb-accordion-item-header>
       <nb-accordion-item-body>
-        <tock-chart [data]="messagesByHourData" title="Messages by Hour of Day" [pretty]="pretty" type="PieChart"></tock-chart>
+        <tock-chart [data]="messagesByHourData" title="Messages by Hour of Day" type="PieChart" [chartPreferences]="userPreferences"></tock-chart>
       </nb-accordion-item-body>
     </nb-accordion-item>
-    <nb-accordion-item #messagesByActionTypeItem (collapsedChange)="collapsedChange($event)">
+    <nb-accordion-item #messagesByActionTypeItem (collapsedChange)="collapsedChange($event)"
+                       *ngIf="userPreferences.graphs.behavior.messagesByActionType">
       <nb-accordion-item-header>Messages by Action Type</nb-accordion-item-header>
       <nb-accordion-item-body>
-        <tock-chart [data]="messagesByActionTypeData" title="Messages by Action Type" [pretty]="pretty" type="PieChart"></tock-chart>
+        <tock-chart [data]="messagesByActionTypeData" title="Messages by Action Type" type="PieChart"
+                    [chartPreferences]="userPreferences"></tock-chart>
       </nb-accordion-item-body>
     </nb-accordion-item>
-    <nb-accordion-item #messagesByStoryCategoryItem (collapsedChange)="collapsedChange($event)">
+    <nb-accordion-item #messagesByStoryCategoryItem (collapsedChange)="collapsedChange($event)"
+                       *ngIf="userPreferences.graphs.behavior.messagesByStoryCategory">
       <nb-accordion-item-header>Messages by Story Category</nb-accordion-item-header>
       <nb-accordion-item-body>
-        <tock-chart [data]="messagesByStoryCategoryData" title="Messages by Story Category" [pretty]="pretty" type="PieChart"></tock-chart>
+        <tock-chart [data]="messagesByStoryCategoryData" title="Messages by Story Category" type="PieChart"
+                    [chartPreferences]="userPreferences"></tock-chart>
       </nb-accordion-item-body>
     </nb-accordion-item>
-    <nb-accordion-item #messagesByStoryTypeItem (collapsedChange)="collapsedChange($event)">
+    <nb-accordion-item #messagesByStoryTypeItem (collapsedChange)="collapsedChange($event)"
+                       *ngIf="userPreferences.graphs.behavior.messagesByStoryType">
       <nb-accordion-item-header>Messages by Story Type</nb-accordion-item-header>
       <nb-accordion-item-body>
-        <tock-chart [data]="messagesByStoryTypeData" title="Messages by Story Type" [pretty]="pretty" type="PieChart"></tock-chart>
+        <tock-chart [data]="messagesByStoryTypeData" title="Messages by Story Type" type="PieChart" [chartPreferences]="userPreferences"></tock-chart>
       </nb-accordion-item-body>
     </nb-accordion-item>
-    <nb-accordion-item #messagesByStoryLocaleItem (collapsedChange)="collapsedChange($event)">
+    <nb-accordion-item #messagesByStoryLocaleItem (collapsedChange)="collapsedChange($event)"
+                       *ngIf="userPreferences.graphs.behavior.messagesByLocale">
       <nb-accordion-item-header>Messages by Locale</nb-accordion-item-header>
       <nb-accordion-item-body>
-        <tock-chart [data]="messagesByStoryLocaleData" title="Messages by Locale" [pretty]="pretty" type="PieChart"></tock-chart>
+        <tock-chart [data]="messagesByStoryLocaleData" title="Messages by Locale" type="PieChart" [chartPreferences]="userPreferences"></tock-chart>
       </nb-accordion-item-body>
     </nb-accordion-item>
   </nb-accordion>
