--- a/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
+++ b/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
@@ -23,7 +23,7 @@
       <button mat-button (click)="refresh()" class="button">
         <mat-icon>refresh</mat-icon>
       </button>
-      <p>To add Sentences, start from <em>Try it</em> or <em>Test the Bot</em> in Tock Studio,
+      <p>To add Sentences, start from <em>New Sentence</em> or <em>Test the Bot</em> in Tock Studio,
         or talk to the bot on any connected channel.</p>
     </div>
   </nb-card-body>
