--- a/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
@@ -23,7 +23,7 @@
       <nb-action class="control-item" nbTooltip="Display conversations using this sentence"
                  *ngIf="displayActions && coreConfig.displayDialogUrl && isRootSentence()">
         <a class="control-item" [routerLink]="[coreConfig.displayDialogUrl]"
-           [queryParams]="{ text: this.sentence.text}"><i class="material-icons">format_quote</i></a>
+           [queryParams]="{ text: this.sentence.text}" target="_blank"><i class="material-icons">format_quote</i></a>
       </nb-action>
       <nb-action class="control-item" (click)="answerToSentence()" nbTooltip="Set a custom answer"
                  *ngIf="displayActions && coreConfig.answerToSentenceUrl && isRootSentence()">
