fixes #1034 application details: click on upload dump unselect nlp engine radio button
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/applications/application-upload/application-upload.component.html
+++ b/nlp/admin/web/src/app/applications/application-upload/application-upload.component.html
@@ -20,7 +20,7 @@
     <div *ngIf="!report">
 
       <p>
-        <nb-radio-group [(ngModel)]="type">
+        <nb-radio-group [(ngModel)]="type" name="upload-type-group">
           <nb-radio *ngIf="state.hasRole(UserRole.technicalAdmin)" value="application" class="dump-type">
             Application Dump
           </nb-radio>
