--- a/bot/admin/web/src/app/bot/story/create-story.component.html
+++ b/bot/admin/web/src/app/bot/story/create-story.component.html
@@ -17,27 +17,32 @@
 <nb-card class="sentence">
   <nb-card-body>
     <tock-select-bot [(configurationId)]="botConfigurationId" [displayConnectorChoice]="false">
-      <br>
-      <span class="sentence-input" *ngIf="story">
-        <input nbInput status="primary" class="phrase"
-               [(ngModel)]="story.userSentence"
-               placeholder="Enter a User Phrase"
-               #newSentence
-               (keyup.enter)="onSentence(newSentence.value)">
-      </span>
-      <button nbButton outline status="primary" [disabled]="!(story && story.userSentence.length !== 0)"
-              (click)="onSentence()">
-        Add
-      </button>
-        <br>
-        <div *ngIf="displayStory" class="separator"></div>
+
+      <nb-card [nbSpinner]="loading" nbSpinnerStatus="primary">
+        <nb-card-body>
+          <span class="sentence-input" *ngIf="story">
+            <input nbInput status="primary" class="phrase"
+                   [(ngModel)]="story.userSentence"
+                   [disabled]="loading"
+                   placeholder="Enter a User Phrase"
+                   #newSentence
+                   (keyup.enter)="onSentence(newSentence.value)">
+          </span>
+          <button nbButton outline status="primary" [disabled]="!(story && story.userSentence.length !== 0) || loading"
+                  (click)="onSentence()">
+            Add
+          </button>
+        </nb-card-body>
+      </nb-card>
       <div *ngIf="displayStory">
-        <tock-story class="story" [story]="story" [fullDisplay]="true" [displaySteps]="true" [submit]="submit"></tock-story>
+        <tock-story class="story" [story]="story" [fullDisplay]="true" [displaySteps]="true"
+                    [submit]="submit"></tock-story>
       </div>
     </tock-select-bot>
   </nb-card-body>
   <nb-card-footer *ngIf="displayStory" class="actions">
-    <button (click)="resetState()" nbButton outline size="small" status="danger" style="margin-right: 10px">Cancel</button>
+    <button (click)="resetState()" nbButton outline size="small" status="danger" style="margin-right: 10px">Cancel
+    </button>
     <button (click)="onReply()" nbButton size="small" status="primary">Create Story</button>
   </nb-card-footer>
 
